demo/bad-pod-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-demo
spec:
  containers:
  - name: nginx
    image: nginx #ritaacr.azurecr.io/nginx:latest
