demo/bad-pod-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-demo
  labels:
    # test1: value1
    # test2: value2
    test3: value3
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: 100Mi
        cpu: 100Mi
