demo/bad-service-lb-pip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pip-service
#  annotations:
#    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
#  type: LoadBalancer
  ports:
  - port: 443
