demo/bad-service-lb-whitelistip.yaml
apiVersion: v1
kind: Service
metadata:
  name: whitelistip-service
spec:
  type: LoadBalancer
#  loadBalancerIP: 78.11.24.19
  ports:
  - port: 443
