demo/bad-service-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-service
spec:
  ports:
  - port: 8080 #443
